<resources>
    <string name="app_name">"Futsal Booking"</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server_client_id">888115119533-midbf0m99gbha75b3t3kulhcesq79idt.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">1033200200076601</string>
    <string name="title_activity_completed_register">CompletedRegisterActivity</string>
    <string name="cfCancel">Cancel</string>
    <string name="cfYes">Next</string>
    <string name="title_activity_tab_bar">TabBar</string>
    <string name="title_activity_tab_user">TabUser</string>
    <string name="title_activity_tab_team">TabTeam</string>
    <string name="title_activity_tab_field">TabField</string>
    <string name="title_activity_tab_league">TabLeague</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_team_football">TeamFootball</string>
    <string name="title_activity_team_group">TeamGroup</string>
    <string name="search_hint">Search</string>
    <string name="time6">6 To 7 AM</string>
    <string name="time7">7 To 8 AM</string>
    <string name="time8">8 To 9 AM</string>
    <string name="time9">9 To 10 AM</string>
    <string name="time10">10 To 11 AM</string>
    <string name="time11">11 To 12 AM</string>
    <string name="time12">12 To 1 PM</string>
    <string name="time13">1 To 2 PM</string>
    <string name="time14">2 To 3 PM</string>
    <string name="time15">3 To 4 PM</string>
    <string name="time16">4 To 5 PM</string>
    <string name="time17">5 To 6 PM</string>
    <string name="time18">6 To 7 PM</string>
    <string name="time19">7 To 8 PM</string>
    <string name="time20">8 To 9 PM</string>
    <string name="time21">9 To 10 PM</string>
    <string name="book6">Available Booking</string>
    <string name="book7">Available Booking</string>
    <string name="book8">Available Booking</string>
    <string name="book9">Available Booking</string>
    <string name="book10">Available Booking</string>
    <string name="book11">Available Booking</string>
    <string name="book12">Available Booking</string>
    <string name="book13">Available Booking</string>
    <string name="book14">Available Booking</string>
    <string name="book15">Available Booking</string>
    <string name="book16">Available Booking</string>
    <string name="book17">Available Booking</string>
    <string name="book18">Available Booking</string>
    <string name="book19">Available Booking</string>
    <string name="book20">Available Booking</string>
    <string name="book21">Available Booking</string>
    <string name="email">Email</string>
    <string name="username">Name</string>
    <string name="phone">Phone Number</string>
    <string name="gander">Gander</string>
    <string name="place">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="btn_logout_from_google">Sign out</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="futsalbooking">Futsal Booking Field</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


</resources>
