<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutBooking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="#c6c6c6"
            android:orientation="vertical"
            android:paddingBottom="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/bgheader"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:text="User Setting"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_male_avatar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edUsername"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:hint="@string/username"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textColorHint="#898888"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:theme="@style/MyEditTextTheme" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_black_24dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:hint="@string/email"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textColorHint="#898888"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:theme="@style/MyEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_black_24dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/editPhone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:hint="@string/phone"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textColorHint="#898888"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:theme="@style/MyEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_black_24dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edgender"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:hint="@string/gander"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textColorHint="#898888"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:theme="@style/MyEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_black_24dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/edPlace"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:hint="@string/place"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textColorHint="#898888"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:theme="@style/MyEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_black_24dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/eddob"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="0dp"
                            android:background="@android:color/transparent"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:hint="Date of Birth"
                            android:singleLine="true"
                            android:textColor="#000"
                            android:textColorHint="#898888"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            android:theme="@style/MyEditTextTheme" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_check_circle_black_24dp" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="0.5dp"
                android:background="#fff"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnBooking"
                        android:layout_width="100dp"
                        android:layout_height="28dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="0dp"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/bgheadertimebook"
                        android:text="Save"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>